# crystalvase

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: make_gallery.py
docs/demo/: struct_08_B2I6.xyz  struct_14_Bi10Cl24Ga6.xyz  struct_37_HgSe4SnTl2.xyz  struct_41_La5MgO16Re3.xyz  struct_44_Na2O24P6Sn4.xyz
examples/: batch_extxyz.py  compare_palettes.py  compare_styles.py
src/crystalvase/: __init__.py  cli.py  demo.py  io.py  palettes.py  render.py  styles.py
tests/: test_smoke.py
