[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crystalvase"
version = "0.1.0"
description = "Fully-vector, publication-style 3D-looking molecule/crystal figures from ASE Atoms"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "W. Stark", email = "wch.stark@gmail.com" }]
keywords = ["ase", "chemistry", "materials", "visualization", "vector", "matplotlib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "ase>=3.22",
    "numpy",
    "matplotlib>=3.5",
    "pillow",           # JPEG/TIFF/WebP output
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
crystalvase = "crystalvase.cli:main"

[project.urls]
Homepage = "https://github.com/wgst/crystalvase"
Repository = "https://github.com/wgst/crystalvase"
Issues = "https://github.com/wgst/crystalvase/issues"

[tool.setuptools.packages.find]
where = ["src"]
